# evmspec

./: .buildinfo  .gitignore  AGENTS.md  Makefile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  renovate.json  search.html  searchindex.js  setup.py
.github/workflows/: benchmark.yaml  black.yaml  compile.yaml  deploy-docs.yaml  lint.yaml  mypy.yaml  pytest.yaml  release.yaml
_modules/: index.html
_modules/evmspec/: block.html  data.html  header.html  log.html  receipt.html  transaction.html  uints.html
_modules/evmspec/data/: _ids.html  _main.html  main.html  uints.html
_modules/evmspec/structs/: block.html  header.html  log.html  receipt.html  transaction.html
_modules/evmspec/structs/trace/: call.html  create.html  reward.html  suicide.html
_modules/evmspec/trace/: call.html  create.html  reward.html  suicide.html
_sources/: index.rst.txt
_sources/source/: evmspec.data.rst.txt  evmspec.rst.txt  evmspec.structs.rst.txt  evmspec.structs.trace.rst.txt  evmspec.trace.rst.txt  modules.rst.txt
benchmarks/: README.md  batch.py  data.py  pytest.ini  test_address_benchmarks.py  test_async_benchmarks.py  test_block_benchmarks.py  test_cache_benchmarks.py  test_decode_hook_benchmarks.py  test_decoding_benchmarks.py  test_enum_benchmarks.py  test_hexbytes_benchmarks.py  test_ids_benchmarks.py  test_numeric_benchmarks.py  test_uints_benchmarks.py
docs/: conf.py
evmspec/: __init__.py  _enum.py  _ids.py  _new.py  _utils.py  block.py  data.py  header.py  log.py  receipt.py  transaction.py  uints.py
evmspec/data/: __init__.py  _cache.py  _enum.py  _ids.py  _main.py  uints.py
evmspec/structs/: __init__.py  block.py  header.py  log.py  receipt.py  transaction.py
evmspec/structs/trace/: _base.py  call.py  create.py  reward.py  suicide.py
evmspec/trace/: __init__.py  _base.py  call.py  create.py  reward.py  suicide.py
source/: evmspec.data.html  evmspec.html  evmspec.structs.html  evmspec.structs.trace.html  evmspec.trace.html  modules.html
tests/: conftest.py  test_block_schema.py  test_data.py  test_structs.py
tests/data/: test_cache.py  test_enum.py  test_ids.py  test_imports.py  test_main.py  test_uints.py
tests/structs/: test_block.py  test_header.py  test_log.py  test_receipt.py  test_trace.py  test_transaction.py
