[tool.poetry]
name = "evmspec"
version = "0.4.13"
description = "A collection of msgspec.Struct definitions for use with the Ethereum Virtual Machine"
authors = ["BobTheBuidler <bobthebuidlerdefi@gmail.com>"]

[build-system]
requires = [
    "setuptools",
    "wheel",
    "mypy[mypyc]==1.19.1",
    "types-cachetools",
    "tomli>=2.0.0; python_version < '3.11'",
    "cchecksum==0.3.9",
    "dictstruct==0.0.9; sys_platform != 'win32' or platform_machine != 'x86'",
    "eth-hash>=0.7.0,<1",
    "eth-typing==5.2.1",
    "ez-a-sync==0.33.10",
    "faster-hexbytes==1.3.5",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# As of 2026/01/23 msgspec doesn't support 32-bit Python windows builds.
# If this is important for your use case, please comment on this issue: https://github.com/jcrist/msgspec/issues/845
skip = "*-win32"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
cachetools = ">=4.1.1,<7"
cchecksum = ">=0.0.3"
dictstruct = ">=0.0.1"
eth-hash = ">=0.7.0,<1"
eth-typing = ">=4.4.0,<6"
faster-eth-utils = ">=4,<6"
faster-hexbytes = ">=1.3.2,<2"
typing_extensions = ">=4.0.0"
safe-pysha3 = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
sphinx = ">=7,<10"
sphinx-rtd-theme = "3.1.0"
mypy = "==1.19.1"
types-cachetools = "*"
pytest = "*"
# we keep this here for sphinx crosslinking
eth-utils = ">=1.10.0"

[tool.mypy]
pretty = true
show_error_codes = true
show_error_context = true
no_warn_no_return = true
files = ["evmspec"]

[tool.black]
line-length = 100
